testsuite/tests/polykinds/T7341.stderr

T7341.hs:11:12: error: [GHC-83865]
    • Expecting one more argument to ‘[]’
      Expected a type, but ‘[]’ has kind ‘* -> *’
    • In the first argument of ‘C’, namely ‘[]’
      In the instance declaration for ‘C []’
